fix: gap width

--- a/frameworks/gap.scss
+++ b/frameworks/gap.scss
@@ -1,4 +1,6 @@
 .gap {
+  width: 100%;
+
   @for $height from 1 through 150 {
     @if ($height % 10 == 0) or ($height % 5 == 0) {
       &.is-#{$height} { height: 1px * $height; }
